fix: always show collapse button

--- a/packages/client/src/layouts/double-column/index.module.scss
+++ b/packages/client/src/layouts/double-column/index.module.scss
@@ -34,7 +34,6 @@
         top: 1rem;
         right: 0;
         z-index: 100;
-        opacity: 0;
         transform: translate(50%);
 
         &.isCollapsed {
